<resources>
    <string name="app_name">EOSTART</string>
    <string name="bp_base_url" translatable="false">https://eos.greymass.com:443</string>
    <string name="coinmarketcap_url" translatable="false">https://api.coinmarketcap.com/</string>
    <string name="coingecko_url" translatable="false">https://api.coingecko.com/</string>
    <string name="eospark_url" translatable="false">https://eospark.com/</string>
    <string name="wannabit_test_url" translatable="false">https://wallet-api-dev.wannabit.io/</string>
    <string name="wannabit_pro_url" translatable="false">https://wallet-api.wannabit.io/</string>
    <string name="chain_id" translatable="false">aca376f206b8fc25a6ed44dbdc66547c36c6c33e3a119ffbeaef943642f0e906</string>
    <string name="eospark_param_token" translatable="false">token</string>
    <string name="eospark_param_trx_info" translatable="false">get_account_related_trx_info</string>
    <string name="eospark_param_trx_check" translatable="false">get_transaction_detail_info</string>
    <string name="db_pppw" translatable="false">wannabitgoeshere</string>
    <string name="eospark_api_url" translatable="false">https://api.eospark.com/</string>
    <string name="eospark_api_key" translatable="false">61a82849325ae02328ee47863d5bca24</string>
    <string name="str_skip">Skip</string>
    <string name="str_next">Next</string>
    <string name="str_ok">OK</string>
    <string name="str_yes">Yes</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_paste">Paste</string>
    <string name="str_clear">Clear</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_edit">Edit</string>
    <string name="str_close">Close</string>
    <string name="str_new">New</string>
    <string name="str_update">Update</string>
    <string name="str_send">Send</string>
    <string name="str_copy">Copy</string>
    <string name="str_share">Share</string>
    <string name="str_receive">Receive</string>
    <string name="str_staked">Staked</string>
    <string name="str_unstaked">Unstaked</string>
    <string name="str_stake">Stake</string>
    <string name="str_unstake">Unstake</string>
    <string name="str_refund">Refund</string>
    <string name="str_delete">Delete</string>
    <string name="str_ram">RAM</string>
    <string name="str_cpu">CPU</string>
    <string name="str_net">NET</string>
    <string name="str_krw">KRW</string>
    <string name="str_usd">USD</string>
    <string name="str_btc">BTC</string>
    <string name="str_amount_1"><![CDATA["+1"]]></string>
    <string name="str_amount_10"><![CDATA["+10"]]></string>
    <string name="str_amount_50"><![CDATA["+50"]]></string>
    <string name="str_amount_100"><![CDATA["+100"]]></string>
    <string name="str_amount_max">Max</string>
    <string name="str_txid">TXID</string>
    <string name="str_eos_contract">eosio.token</string>
    <string name="str_menu_account">Account</string>
    <string name="str_menu_wallet">Wallet</string>
    <string name="str_menu_history">Transaction</string>
    <string name="str_menu_settings">Settings</string>
    <string name="str_one_eos">1 EOS =<![CDATA[" "]]></string>
    <string name="str_txid_dash">TXID :<![CDATA[" "]]></string>
    <string name="str_memo_dash">Memo :<![CDATA[" "]]></string>
    <string name="str_sent">Sent</string>
    <string name="str_received">Received</string>
    <string name="str_buy">Buy %1$s</string>
    <string name="str_sell">Sell %1$s</string>
    <string name="str_ramtrade_eos">Trade Ram (EOS)</string>
    <string name="str_ramtrade_kb">Trade Ram (KB)</string>
    <string name="str_buy_ram_for">Buy RAM for</string>
    <string name="str_sell_ram_for">Sell RAM for</string>
    <string name="str_buy_kb_tx1">Buy</string>
    <string name="str_buy_kb_tx2">KB of RAM</string>
    <string name="str_sell_kb_tx1">Sell</string>
    <string name="str_sell_kb_tx2">KB of RAM</string>
    <string name="str_dialog_title_buy_ram">Buy Ram</string>
    <string name="str_dialog_title_sell_ram">Sell Ram</string>
    <string name="str_will_pay">You will pay</string>
    <string name="str_will_get">You will receive</string>
    <string name="str_ram_fee">Fees (0.5%)</string>
    <string name="str_balance">Balance</string>
    <string name="str_total_ram">Total RAM</string>
    <string name="str_ram_description1">Due to current price fluctuations, there may be fluctuations in the purchase quantity and fees.</string>
    <string name="str_ram_description2">The fee will paid to the EOS system. </string>
    <string name="str_ram_trade_success">RAM trade completed successfully.</string>
    <string name="str_ram_trade_failed">RAM trade failed.</string>
    <string name="str_available">available<![CDATA[" : "]]></string>
    <string name="str_total">total<![CDATA[" : "]]></string>
    <string name="str_amount_10p"><![CDATA["10%"]]></string>
    <string name="str_amount_30p"><![CDATA["30%"]]></string>
    <string name="str_amount_50p"><![CDATA["50%"]]></string>
    <string name="str_amount_70p"><![CDATA["70%"]]></string>
    <string name="str_amount_100p"><![CDATA["100%"]]></string>
    <string name="str_delegate_success">Delegate completed successfully.</string>
    <string name="str_undelegate_success">Undelegate completed successfully.</string>
    <string name="str_undelegate_description1">Refund will takes 3days for balance.</string>
    <string name="str_include_fee">(include fees)</string>
    <string name="str_private_key">Private Key</string>
    <string name="str_private_key_add">Add Private Key</string>
    <string name="str_account_name">Account Name</string>
    <string name="str_transactions">Transactions</string>
    <string name="str_update_msg">New version available. \nWould you like to update the application?</string>
    <string name="str_update_force_msg">Update required to continue using application. \nWould you like to update the application?</string>
    <string name="str_add_account">Add Account</string>
    <string name="str_recent_account">Recently used Account</string>
    <string name="str_memo_hint">Transaction Memo</string>
    <string name="str_recipient_name">Recipient Account Name</string>
    <string name="str_memo">Memo (Optional)</string>
    <string name="str_amount">Amount</string>
    <string name="str_no_pkey">No PrivateKey</string>
    <string name="str_no_pkey_msg">This account does not have a registered private key. \nPlease insert your private key to make transactions and manage resources.</string>
    <string name="str_add_key">Add key</string>
    <string name="str_common">Common</string>
    <string name="str_start">Start</string>
    <string name="str_aboutus">About us</string>
    <string name="str_accounts">Accounts</string>
    <string name="str_currency">Currency</string>
    <string name="str_language">Language</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_twitter">Twitter</string>
    <string name="str_homepage">Homepage</string>
    <string name="str_intent_add">This account does not have a registered private key. \nPlease insert your private key to make transactions and manage resources.</string>
    <string name="str_restore_account">Add Account</string>
    <string name="str_new_account">New Account</string>
    <string name="str_backup_key">Backup private key</string>
    <string name="str_delete_wallet">Delete account</string>
    <string name="str_account">Account</string>
    <string name="str_warnning_key">Always keep your Private Key\nin a safe place.</string>
    <string name="str_warnning_key_msg">Account cannot be restored\nif you lose your phone or delete the application. \nYou MUST back up your private key in a secure place.</string>
    <string name="str_copy_account">Copy account name</string>
    <string name="str_copyed_msg">Copied to clipboard</string>
    <string name="str_copyed_account_msg">Copied to clipboard</string>
    <string name="str_account_delete">Account deleted.</string>
    <string name="str_wellcome_title0">Why EOSTART?</string>
    <string name="str_wellcome_title1">Do you have EOS?</string>
    <string name="str_wellcome_title2">EOStart<![CDATA["'"]]>s Security</string>
    <string name="str_wellcome_msg0">No registration, no fees.\nEOS tokens supported \nCompletely decentralized transactions.</string>
    <string name="str_wellcome_msg1">Conveniently manage multiple\nEOS accounts and transfer your\nEOS<![CDATA[" & ']]>EOS tokens.</string>
    <string name="str_wellcome_msg2">Strong security\nDecentralized EOS wallet\nNo data stored in our servers.</string>
    <string name="str_start_title">EOS Wallet\nstore and use digital currencies.</string>
    <string name="str_start_msg">Most secure multi-asset bloackchain wallet that\nyou can bring everywhere you go.</string>
    <string name="str_new_account_msg">Would you like create a new account on EOStart website?</string>
    <string name="str_delete_title">Delete Account</string>
    <string name="str_delete_msg">Would you like to delete this account?</string>
    <string name="str_send_success_title">Transaction completed</string>
    <string name="str_no_transaction">No transaction history.</string>
    <string name="str_loading_transaction">Loading..</string>
    <string name="str_passcode_hint">(Use 4 digits and 1 alphabet)</string>
    <string name="str_set">Setting</string>
    <string name="str_service_set">Service Setting</string>
    <string name="str_service_security">Security</string>
    <string name="str_service_applock">App lock</string>
    <string name="str_service_finger">Fingerprint</string>
    <string name="str_service_telegram">Telegram</string>
    <string name="str_terms">Policy</string>
    <string name="str_service_terms">Terms of Use</string>
    <string name="str_service_licenses">Open Licenses</string>
    <string name="str_service_github">GitHub</string>
    <string name="str_applock_title">Insert your password foPassword cannot be recovered.\nPlease remember your passwordr app lock.</string>
    <string name="str_applock_title2">Insert again to confirm.</string>
    <string name="str_applock_des">.</string>
    <string name="str_applock_set">Set app lock.</string>
    <string name="str_unlock_title">Insert your password to unlock.</string>
    <string name="str_applock_enabled">App lock enabled.</string>
    <string name="str_applock_diaabled">App lock disabled.</string>
    <string name="str_dismiss">Dismiss</string>
    <string name="str_request_finger_swipe">Use your fingerprint to unlock the app.</string>
    <string name="str_using_password">Unlock with password.</string>
    <string name="str_title_restore">Add Account</string>
    <string name="str_title_edit_token">Edit tokens</string>
    <string name="str_title_my_account">My EOS account</string>
    <string name="str_title_ram">Manage Ram</string>
    <string name="str_title_delegate">Manage Delegate</string>
    <string name="str_hint_account_name"><font size="15">Account Name</font></string>
    <string name="str_hint_private_key"><font size="15">Private Key</font></string>
    <string name="str_error_clipboard">No text from clipboard.</string>
    <string name="str_error_no_account">This account does not exist.</string>
    <string name="str_error_network">Network error. Please try again later.</string>
    <string name="str_error_privatekey">Incorrect private key.</string>
    <string name="str_error_self_send">You cannot send to your own account.</string>
    <string name="str_already_existed_account">Account already exists.</string>
    <string name="str_error_root_title">Rooted</string>
    <string name="str_error_root_msg">We do not support rooted devices.</string>
    <string name="str_error_common_title">Failed</string>
    <string name="str_error_common_msg">Sorry!\nNetwork is currently unstable.\nPlease try again.</string>
    <string name="key_msg">Insert private key to enable transactions.</string>
</resources>